fix: fix font-size for btns on the win frame on small screens

--- a/src/style.scss
+++ b/src/style.scss
@@ -735,4 +735,10 @@ main {
 .toDoBtn {
   width: 40%;
   padding: 10px;
+  @media (max-width: 700px) {
+    font-size: 18px;
+  }
+  @media (max-width: 500px) {
+    font-size: 13px;
+  }
 }
